# rust-api

./: Cargo.toml
migrations/2020-03-21-145325_create_users/: up.sql
public/: index.html
src/: db.rs  main.rs  models.rs  schema.rs  static_files.rs
