[package]
name = "babanu-r-us"
version = "0.1.0"
authors = ["Tony Gorez <gorez.tony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.32"

rocket = "0.4.0-dev"
rocket_codegen = "0.4.0-dev"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]